lib: Add VFS300/VFS301 driver

https://bugs.freedesktop.org/show_bug.cgi?id=37574