libfprint/fp_internal.h
@@ -268,6 +268,9 @@ extern struct fp_img_driver vcom5s_driver;
 #ifdef ENABLE_VFS101
 extern struct fp_img_driver vfs101_driver;
 #endif
+#ifdef ENABLE_VFS301
+extern struct fp_img_driver vfs301_driver;
+#endif
 
 extern libusb_context *fpi_usb_ctx;
 extern GSList *opened_devices;
